added admin database

--- a/admin_panel/templates/login.html
+++ b/admin_panel/templates/login.html
@@ -25,7 +25,7 @@
     </style>
     <body>
         <div class="center w3-card w3-half">
-            <form action="login.php" method="POST" class="">
+            <form action="../login.php" method="POST" class="">
                 <label><h3>Admin login</h3></label><br>
                 <input required name="username" id="username" placeholder="Username" class="w3-input"/><br>
                 <input required type="password" name="password" id="password" placeholder="Password" class="w3-input"/><br>
