Bind port for flask deployment

--- a/webflask/templates/login.html
+++ b/webflask/templates/login.html
@@ -13,11 +13,11 @@
         <label for="password">Password:</label>
         <input type="password" class="form-control" id="password" name="password" placeholder="Enter password" required>
       </div>
-      <div class="form-check mb-3">
+      <!--<div class="form-check mb-3">
         <label class="form-check-label">
           <input class="form-check-input" type="checkbox" name="remember" required> Remember me
         </label>
-      </div>
+      </div>-->
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
   </div>
