--- a/webflask/templates/admin_panel.html
+++ b/webflask/templates/admin_panel.html
@@ -18,7 +18,13 @@
       <tr>
         <td>{{ loop.index }}</td>
         <td>{{ user.username }}</td>
-        <td>{{ user.note }}</td>
+        <td>
+          <ul>
+            {% for note in user.notes %}
+            <li>{{ note.data }}</li>
+            {% endfor %}
+          </ul>
+        </td>
       </tr>
       {% endfor %}
     </tbody>
