--- a/webflask/templates/services.html
+++ b/webflask/templates/services.html
@@ -1,23 +1,19 @@
 {% extends "base.html" %}{% block title %}Services{% endblock %}
 {% block content %}
-<div class="container-fluid mt-3">
-    <div class="container-fluid mb-3">
-        <h4 class="text-center m-2">Welcome, <strong>{{ username }}!</strong></h4>
 
-        <ul class="list-group list-group-numbered" id="notes">
-            {% for note in user.notes %}
-            <li class="list-group-item">
-                {{ note.data }}
-                <button type="button" class="btn-close float-end" onclick="deleteNote({{ note.id }})"></button>
-            </li>
-            {% endfor %}
-        </ul>
-    </div>
+
+<div class="container-fluid mb-3">
+    <h4 class="text-center m-2">Welcome, <strong>{{ username }}!</strong></h4>
 </div>
 
 
 <div class="container-fluid mt-3">
-    <table class="table">
+    <div class="row">
+        <div class="col">
+            <input type="text" class="form-control" id="searchInput" placeholder="Search for services or IPs">
+        </div>
+    </div>
+    <table class="table" id="resultsTable">
         <thead>
             <tr>
                 <th>Service</th>
